compiler/flux-typecheck/src/snapshots/flux_typecheck__tests__parse_function_call_type_propagation_throughout_scopes.snap
---
source: compiler/flux-typecheck/src/tests.rs
expression: s
---
error[E0000]: could not unify `i13` and `i32`
   ┌─ main:13:6
   │
 6 │     let x = 0;
   │             - `i13` type
   ·
12 │         i32 y = 10;
   │         ---- `i32` type
13 │         if z == y {
   │            ^^^^^^^ could not unify `i13` and `i32`


